--- a/src/main/res/values-it/strings.xml
+++ b/src/main/res/values-it/strings.xml
@@ -5,6 +5,7 @@
     <string name="photofeed_title">Alza a nastro</string>
     <string name="general_warning">AVVERTIMENTO</string>
     <string name="general_ok">OK</string>
+    <string name="general_any">Qualsiasi</string>
     <string name="general_settings_abbr">Impost.</string>
     <string name="general_disallow">Non abilitare</string>
     <string name="general_allow">Abilitare</string>
@@ -19,6 +20,7 @@
     <string name="likes_background_text">Non hai simpatie</string>
     <string name="visitors_background_text">Non ci sono le visite</string>
     <string name="chat_background_text">Non ci sono i messaggi in entrata</string>
+    <string name="entrance">Entrata</string>
     <string name="filter_only_online">Solo online</string>
     <string name="filter_city_age_parameters">Età e città</string>
     <string name="filter_select_city">Scelta della città</string>
@@ -158,6 +160,8 @@
     <string name="general_visitors_tab_views">visite</string>
     <string name="general_profile">Profilo</string>
     <string name="general_settings">Impostazioni</string>
+    <string name="auth_btn_vk">Vkontakte</string>
+    <string name="auth_btn_fb">Facebook</string>
     <string name="auth_retry">Riprovare</string>
     <string name="dating_header_girls">Ragazze da %1$d a %2$d</string>
     <string name="dating_header_guys">Ragazzi da %1$d a %2$d</string>
@@ -368,6 +372,9 @@
     <string name="birthdate_confirm">Per favore indica la tua età altrimenti non potrai fare nuove conoscenze</string>
     <string name="set_birthdate">Indicare l’età</string>
     <string name="welcome_to_topface">Benvenuti in Topface!</string>
+    <string name="im_boy">Sono un ragazzo</string>
+    <string name="im_girl">Sono una ragazza</string>
+    <string name="u_sex">Il vostro  sesso</string>
     <string name="incorrect_email">E-mail errata</string>
     <string name="incorrect_login">Login errato</string>
     <string name="incorrect_password">Password errata</string>
@@ -382,6 +389,7 @@
     <string name="gallery">Galleria</string>
     <string name="no_photo_take_photo">Nessuno può conoscerti! Scatta una foto o scegline una dall’album</string>
     <string name="photo_for_avatar">La foto è pronta per essere inviata! Questa è la tua prima foto e sarà il tuo avatar.</string>
+    <string name="add_photo_before">Devi prima aggiungere foto</string>
     <string name="change_email">Cambiare l’e-mail</string>
     <string name="send_confirmation_email">Invia conferma all’indirizzo e-mail</string>
     <string name="change_password">Cambia password</string>
@@ -535,6 +543,9 @@
     <string name="settings_feedback_transaction_number">Numero dell’ordine</string>
     <string name="settings_feedback_transaction_link">Dove posso trovare numero dell’ordine?</string>
     <string name="general_logout_error">Purtroppo il logout non è stato effettuato</string>
+    <string name="auth_btn_ok">Odnoklassniki</string>
+    <string name="auth_btn_tf">Account Topface</string>
+    <string name="birthday">Compleanno</string>
     <string name="other_auth">Accedi tramite altri sistemi</string>
     <string name="settings_feedback_transaction_number_hint">Inserisci il numero dell’ordine</string>
     <string name="delete_visitors">Elimina visitatori</string>
