--- a/src/main/res/values-lt/strings.xml
+++ b/src/main/res/values-lt/strings.xml
@@ -163,6 +163,8 @@
     <string name="general_visitors_tab_views">peržiūros</string>
     <string name="general_profile">Profilis</string>
     <string name="general_settings">Nustatymai</string>
+    <string name="auth_btn_vk">ВКонтакте</string>
+    <string name="auth_btn_fb">Facebook</string>
     <string name="auth_retry">Pakartoti bandymą</string>
     <string name="dating_header_girls">Merginos nuo %1$d iki %2$d</string>
     <string name="dating_header_guys">Vaikinai nuo %1$d iki %2$d</string>
@@ -326,6 +328,7 @@
     <string name="ban_complain">Pasiskųsti dėl bano</string>
     <string name="general_ready">Paruošta</string>
     <string name="buying_store_ok">Pirkimas sėkmingai baigtas</string>
+    <string name="buying_store_fail">Pirkimo užbaigti nepavyko.</string>
     <string name="vip_privileges">VIP privilegijos</string>
     <string name="vip_rest">Jūs prenumeruojate VIP</string>
     <string name="vip_invis">Nematomas režimas</string>
@@ -562,6 +565,7 @@
     <string name="settings_feedback_transaction_number">Užsakymo numeris</string>
     <string name="settings_feedback_transaction_link">kur rasti užsakymo numerį?</string>
     <string name="general_logout_error">Apgailestaujame, nepavyko išeiti iš paskyros.</string>
+    <string name="auth_btn_ok">Bendraklasiai</string>
     <string name="auth_btn_tf">Topface paskyra</string>
     <string name="birthday">Gimimo diena</string>
     <string name="other_auth">Įeiti per kitas svetaines</string>
@@ -645,6 +649,8 @@
     <string name="send_feedback">Išsiųsti pranešimą</string>
     <string name="get_vip_free">Gauk VIP nemokamai</string>
     <string name="buy_more_sympathies">\"Gauk daugiau simpatijų, populiarėk\"</string>
+    <string name="transaction_code_help">Jei jūs atsiųsite mums transakcijos kodą, tai gali pagelbėti vykdant jūsų užklausą, o taip pat pagreitins jos apdorojimą. Išsamią informaciją apie užsakymą galima gauti per %s.</string>
+    <string name="google_wallet">Google-piniginė</string>
     <string name="google_service_general_title">Pranešimai nepasiekiami</string>
     <string name="google_service_disabled_title">Pas jus yra išjungtos Google Play paslaugos, kurias būtina įjungti, kad veiktų pranešimai.</string>
     <string name="google_service_disabled_button">Įjungti</string>
