--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -144,7 +144,7 @@
 
     <!--/ строки iOS -->
 
-    <string name="general_error">ОШИБКА.</string>
+    <string name="general_error">ОШИБКА</string>
     <string name="general_yes">Да</string>
     <string name="general_no">Нет</string>
     <string name="general_cancel">Отмена</string>
