--- a/src/blueStacks/res/values-ru/strings.xml
+++ b/src/blueStacks/res/values-ru/strings.xml
@@ -24,7 +24,7 @@
     <string name="likes_background_text">Нет симпатий</string>
 
     <string name="visitors_background_text">Нет гостей</string>
-
+    <string name="need_set_avatar">С вами никто не может познакомиться! Установите фото на аватар.</string>
     <string name="chat_background_text">Входящих сообщений нет</string>
     <string name="entrance">Вход</string>
     <string name="filter_only_online">Только онлайн</string>
