--- a/src/ifree/res/values-ru/strings.xml
+++ b/src/ifree/res/values-ru/strings.xml
@@ -838,7 +838,7 @@
     <string name="settings_check_vip_cell">Проверить VIP-статус</string>
     <string name="settings_check_vip_alert">Запрос на проверку отправлен</string>
 
-
+    <string name="go_dating_message">Начните знакомиться, и здесь вы увидите пользователей, посетивших ваш профиль</string>
     <string name="novice_sympathy">Отправляйте симпатии тем, кто вам\nдействительно нравится,\nчтобы начать приятное знакомство</string>
     <string name="novice_sympathies_bonus">Вы получаете %1$d симпатии в\nподарок! Это означает, что вы\nточно понравитесь %2$d людям,\nкоторые выразят вам свою симпатию</string>
 </resources>
